# fastkit-examples

./: .gitignore  LICENSE  README.md
crm-invoicing/: main.py  pyproject.toml  requirements.txt  users.py
crm-invoicing/alembic/: env.py
crm-invoicing/alembic/versions/: 2201c977521a_create_invoice_items_table.py  81fa0fc60a4f_create_clients_table.py  bfdeabdceb0d_create_products_table.py  c84d0adcb2b8_create_invoices_table.py  d8a36553a067_create_invoice_items_table.py  e2ba98ba5318_create_users_table.py
crm-invoicing/app/infrastructure/: auth.py
crm-invoicing/app/models/: __init__.py  client.py  enums.py  invoice.py  invoice_item.py  product.py
crm-invoicing/app/repositories/: client_repository.py  invoice_item_repository.py  invoice_repository.py  product_repository.py
crm-invoicing/app/routers/: client.py  invoice.py  product.py
crm-invoicing/app/schemas/: __init__.py  client.py  invoice.py  invoice_item.py  product.py
crm-invoicing/app/seeders/: user_seeder.py
crm-invoicing/app/services/: __init__.py  client_service.py  invoice_item_service.py  invoice_service.py  product_service.py
crm-invoicing/config/: auth.py
crm-invoicing/modules/clients/: router.py
crm-invoicing/modules/invoices/: service.py
crm-invoicing/templates/: invoice.html
crm-invoicing/transaltions/: en.json
fastkit-invoicing/: main.py  pyproject.toml
fastkit-invoicing/config/: cache.py
fastkit-invoicing/migrations/: env.py
fastkit-invoicing/migrations/versions/: dde42ece88c7_create_clients_table.py
fastkit-invoicing/modules/clients/: router.py
fastkit-invoicing/modules/clientses/: schemas.py
fastkit-invoicing/seeders/: ClientSeeder.py
quickstart/: main.py  models.py  requirements.txt  services.py
quickstart/config/: database.py
(+10 files in other folders)
